--- a/dataplane/Cargo.toml
+++ b/dataplane/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = ["api-server", "loader", "common", "xtask"]
+resolver = "2"
 
 [patch.crates-io]
 aya = { git = "https://github.com/aya-rs/aya", branch="main" }
