--- a/dataplane/api-server/Cargo.toml
+++ b/dataplane/api-server/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { version = "1.32", features = ["macros", "rt", "rt-multi-thread", "net"
 common = { path = "../common", features=["user"] }
 regex = "1"
 libc = "0.2"
+console-subscriber = "0.2.0"
 
 [build-dependencies]
 tonic-build = "0.9.2"
