--- a/dataplane/loader/Cargo.toml
+++ b/dataplane/loader/Cargo.toml
@@ -14,6 +14,7 @@ log = "0.4"
 tokio = { version = "1.32.0", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
 api-server = { path = "../api-server" }
 anyhow = "1"
+console-subscriber = "0.2.0"
 
 [[bin]]
 name = "loader"
