--- a/dataplane/xtask/Cargo.toml
+++ b/dataplane/xtask/Cargo.toml
@@ -11,6 +11,7 @@ prost = "0.11.9"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
 tonic = "0.9.2"
 api-server = { path = "../api-server" }
+console-subscriber = "0.2.0"
 
 [build-dependencies]
 tonic-build = "0.9.2"
